# a2a

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml  setup.sh
src/: config.py  main.py
src/extractor/: claude.py  gemini.py  schema.py
src/output/: generator.py
src/output/templates/: report.html.j2
src/pipeline/: filter.py  scorer.py
src/scraper/: engine.py  sites.py  strategies.py
tests/: test_config.py  test_extractor.py  test_filter.py  test_scorer.py  test_sites.py
